ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: myrecipe.norioo.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myrecipe-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: myrecipe-backend
            port:
              number: 8080
